Finished function to insert new levels of directories infinitely

--- a/css/styles.less
+++ b/css/styles.less
@@ -12,11 +12,12 @@ body{
 
 	width:960px;
 	margin:60px auto;
+	position:relative;
 }
 
 .level-container{
-	width:30%;
-	float:left;
+	width:290px;
+	position:absolute;
 	background:white;
 	margin-right:10px;
 	margin-top:20px;
@@ -70,6 +71,18 @@ body{
 		display:block;
 	}
 
+}
+
+#first-level{
+	left:0;
+}
+
+#second-level{
+	left:300px;
+}
+
+#third-level{
+	left:600px;
 }
 
 #fourth-level{
