--- a/css/styles.less
+++ b/css/styles.less
@@ -16,6 +16,11 @@ body{
 		list-style:none;
 		margin:0 0 10px 0;
 		padding:0;
+		height:20px;
+		li{
+			float:left;
+			display:inline;
+		}
 		li:after{
 			content:" / ";
 		}
