Moved FTP Credentials to own config file

--- a/css/styles.less
+++ b/css/styles.less
@@ -218,8 +218,8 @@ header{
 		//margin:0 auto;
 		//float:left;
 		position:absolute;
-		//left:30px;
-		margin:14px 0 0 160px;
+		right: 15px;
+		top: 13px;
 		input{
 			border-radius:3px;
 			border-top-right-radius:0;
